# fmt-rs

./: Cargo.toml  LICENSE-MIT  README.md  flake.nix
examples/: simple.rs
libfmt/: Cargo.toml  README.md  foo.rs
libfmt-rs/: Cargo.toml  README.md
libfmt-rs/examples/: dump.rs  errors.rs
libfmt-rs/src/: attrs.rs  engine.rs  expr.rs  f0000_drop_trailing_comma.rs  f0001_developer_comments.rs  f0002_smart_wrapping.rs  f0003_drop_ampersand_trailing_space.rs  generics.rs  item.rs  lib.rs  macro.rs  pat.rs  path.rs  stmt.rs  ty.rs
libfmt-rs/src/model/: break_token.rs  comment.rs  config.rs  error.rs  mod.rs  position.rs  ring.rs  source.rs  tokens.rs  track.rs
libfmt-rs/tests/: test.rs
libfmt/examples/: dump.rs  print.rs
libfmt/src/: F0000_drop_trailing_comma.rs  F0000_skip_trailing_comma.rs  F0001_feature_comments.rs  F0002_feature_smart_wrap.rs  attr.rs  attrs.rs  comments.rs  config.rs  convenience.rs  data.rs  engine.rs  error.rs  expr.rs  feature_comments_tests.rs  feature_smart_wrap.rs  generics.rs  item.rs  lib.rs  lifetime.rs  lit.rs  macro.rs  pat.rs  path.rs  ring.rs  stmt.rs  token.rs  ty.rs
libfmt/src/algorithm/: engine.rs  mod.rs  token.rs
libfmt/src/model/: begin_token.rs  break_token.rs  comment.rs  config.rs  delta.rs  mod.rs  position.rs  print_frame.rs  ring.rs  scan.rs  source.rs  token.rs  tokens.rs
libfmt/tests/: test.rs
src/: main.rs
src/utils/: color.rs  ensure.rs  mod.rs
