[package]
name = "fmt-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple Rust source code formatter binary"
repository = "https://github.com/phR0ze/fmt-rs"
exclude = [
    "docs",
    "config",
    "examples",
    ".git",
    ".githooks",
    ".github",
    "tests",
    "benches",
    "target",
    ".vscode",
]

[workspace]
members = ["libfmt-rs"]

[dependencies]
anyhow = "1.0"
similar = "2.6.0"
libfmt-rs = { path = "libfmt-rs" }
