[package]
name = "libfmt-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["development-tools"]
description = "Simple Rust source code formatter library"
repository = "https://github.com/phR0ze/fmt-rs/libfmt-rs"
keywords = ["rustfmt"]
exclude = [
    "docs",
    "config",
    "examples",
    ".git",
    ".githooks",
    ".github",
    "tests",
    "benches",
    "target",
    ".vscode",
]

[dependencies]
quote = { version = "1.0.35", default-features = false }
proc-macro2 = { version = "1.0.80", default-features = false, features = [
    "span-locations", # Provides advanced span functions
] }
syn = { version = "2.0.76", default-features = false, features = [
    "full",
    "parsing",
] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0"
indoc = "2"
itertools = "0.13"
tracing-subscriber = "0.3"
tracing-test = "0.2"
